# NeuralCabin

./: .gitignore  API_CONTRACT.md  Cargo.toml  DELIVERY_SUMMARY.md  QUICKSTART.md  README.md  REFACTOR_README.md  package-lock.json  package.json  start-dev.bat  start-dev.sh  test-e2e.sh
.claude/: settings.local.json
.github/workflows/: autobuild-test.yml
assets/: make-icon.js
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs  models.rs  ws.rs
docs/: rust-migration.md
engine/: Cargo.toml
engine/src/: activations.rs  backend.rs  corpus.rs  lib.rs  loss.rs  nn.rs  optimizer.rs  persistence.rs  tensor.rs  tokenizer.rs  transformer.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  settings.ts
frontend/src/tabs/: CorpusTab.tsx  DocsTab.tsx  InferenceTab.tsx  NetworksTab.tsx  PluginsTab.tsx  ServerTab.tsx  SettingsTab.tsx  TrainingTab.tsx  VocabTab.tsx
native/cpp-inference-server/: CMakeLists.txt
native/cpp-inference-server/include/neuralcabin/: aes_gcm.hpp  server.hpp  weight_store.hpp
native/cpp-inference-server/src/: aes_gcm.cpp  main.cpp  server.cpp  weight_store.cpp
native/rust-engine/: Cargo.toml  README.md
native/rust-engine/neuralcabin-core/: Cargo.toml
native/rust-engine/neuralcabin-core/src/: api.rs  cpu.rs  data.rs  distributed.rs  dtypes.rs  fusion.rs  gpu.rs  jit.rs  layers.rs  lib.rs  neuroevolution.rs  onnx.rs  optim.rs  rl.rs  tensor.rs
native/rust-engine/neuralcabin-node/: Cargo.toml  index.js
native/rust-engine/neuralcabin-node/src/: lib.rs
scripts/: bench-train.js  bump-version.js
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: export.rs  lib.rs  main.rs  models.rs  persistence.rs  server.rs
src/dsl/: compiler.js  interpreter.js  lexer.js  parser.js  typecheck.js
src/engine/: chat-format.js  layers.js  model.js  neuroevolution.js  optim.js  rl.js  tensor-native-loader.js  tensor.js  tokenizer.js  trainer-parallel.js  trainer-worker.js  trainer.js
src/main/: api-server.js  main.js  plugin-loader.js  preload.js  storage.js  training-manager.js
src/plugins/chess/: gemini-code-1777068900031.js  main.js  manifest.json  renderer.js
src/plugins/self-driving-car/: main.js  renderer.js
src/plugins/warehouse-robot/: main.js  renderer.js
src/renderer/: app.js  docs.js  index.html  styles.css  templates.js
tests/: run-tests.js
ui/: Cargo.toml
ui/src/: app.rs  corpus.rs  docs.rs  generator.rs  lib.rs  networks.rs  plot.rs  plugins.rs  theme.rs  vocab.rs
