[workspace]
resolver = "2"
members = ["engine", "src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["NeuralCabin Contributors"]
repository = "https://github.com/guythatlivesandcodes/neuralcabin"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
