[package]
name = "neuralcabin-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "NeuralCabin neural-network engine — tensors, autograd, layers, optimizers, all from scratch."

[lib]
name = "neuralcabin_engine"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Burn provides tensor ops, autodiff, and optimizers with a pluggable backend.
# - `wgpu`     : GPU acceleration (cross-platform, runs on laptop/low-end GPUs)
# - `autodiff` : automatic differentiation (replaces our hand-written tape)
# - `ndarray`  : CPU backend (required so `cargo test` runs without a GPU)
# - `std`      : standard library bridge
burn = { version = "0.16", default-features = false, features = ["wgpu", "autodiff", "ndarray", "std"] }

[dev-dependencies]
# Burn 0.16's autodiff backend has thread-local node state that breaks when
# multiple training-step tests run in parallel. We serialize them with
# `#[serial(autodiff)]` so the full suite is reliable under default cargo test.
serial_test = "3"
