[package]
name = "neuralcabin"
version = "0.1.0"
edition = "2021"
description = "NeuralCabin — pure Rust neural network workbench, Tauri desktop app."

[lib]
name = "neuralcabin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "neuralcabin"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
neuralcabin-engine = { path = "../engine" }
