[workspace]
members = [
  "neuralcabin-core",
  "neuralcabin-node"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["NeuralCabin"]
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
half = { version = "2.4", features = ["num-traits", "serde"] }
memmap2 = "0.9"
naga = { version = "0.20", features = ["spv-out", "wgsl-in"] }
parking_lot = "0.12"
pollster = "0.3"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
wgpu = "0.20"
napi = { version = "2.16", default-features = false, features = ["napi8"] }
napi-derive = "2.16"
