[package]
name = "neuralcabin-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
half.workspace = true
memmap2.workspace = true
naga.workspace = true
parking_lot.workspace = true
pollster.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wgpu.workspace = true
