[package]
name = "neuralcabin-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
napi.workspace = true
napi-derive.workspace = true
neuralcabin-core = { path = "../neuralcabin-core" }
parking_lot.workspace = true

[build-dependencies]
napi-build = "2.1"
